--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "i18next": "^22.5.0",
     "primereact": "^9.4.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-i18next": "^12.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
